[project]
name = "repl-nix-fileparserpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.10",
    "backoff>=2.2.1",
    "django-routers>=0.2",
    "fastapi>=0.115.6",
    "nltk>=3.9.1",
    "numpy>=2.2.0",
    "openai>=1.57.2",
    "pandas>=2.2.3",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.19",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.1",
]
